style: fix navbar screen overflow in mobile

--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -38,7 +38,7 @@ header {
 				@media screen and (min-width: 768px) and (max-width: 992px) {
 					justify-content: left;
 				}
-				@media screen and (max-width: 380px) {
+				@media screen and (max-width: 768px) {
 					justify-content: flex-start;
 				}
 				li {
